# drone_test0

./: README.md
.metadata/.plugins/org.eclipse.cdt.core/: language.settings.xml  oroca_ros_tutorials.1498722261253.pdom
.metadata/.plugins/org.eclipse.core.resources/.projects/oroca_ros_tutorials/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.projects/oroca_ros_tutorials/.indexes/e4/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
Onboard-SDK-ROS-3.2/dji_sdk/launch/: sdk_manifold.launch
Onboard-SDK-ROS-3.2/dji_sdk_demo/script/: client2.py
beginner_tutorials/: package.xml
guidance_test0/: CMakeLists.txt  package.xml
guidance_test0/launch/: guidance_test0_client.launch
my_first_ros_pkg/: CMakeLists.txt  package.xml
my_first_ros_pkg/src/: hello_world_node.cpp
oroca_ros_tutorials/: .cproject  .project  CMakeLists.txt  package.xml
oroca_ros_tutorials/src/: ros_tutorial_msg_publisher.cpp  ros_tutorial_msg_subscriber.cpp
